# advent_of_code

.github/workflows/: 2022.yml  2023.yml  2024.yml
2022/: Cargo.toml  README.md
2022/data/day1/: test_input2.txt
2022/src/: lib.rs
2023/: CMakeLists.txt  Dockerfile  README.md  build.sh
2023/src/day01/: main.cpp
2023/src/day01_1/: main.cpp
2023/src/day01_2/: main.cpp
2023/src/day02/: main.cpp
2023/src/day02_1/: main.cpp
2023/src/day02_2/: main.cpp
2023/src/day03/: main.cpp
2023/src/day03_1/: main.cpp
2023/src/day03_2/: main.cpp
2023/src/day04/: main.cpp
2023/src/day04_1/: main.cpp
2023/src/day04_2/: main.cpp
2023/src/day05/: main.cpp
2023/src/day05_1/: main.cpp
2023/src/day05_2/: main.cpp
2023/src/day06/: main.cpp
2023/src/day06_1/: main.cpp
2023/src/day06_2/: main.cpp
2023/src/day07/: main.cpp
2023/src/day07_1/: main.cpp
2023/src/day07_2/: main.cpp
2023/src/day08/: main.cpp
2023/src/day08_1/: main.cpp
2023/src/day08_2/: main.cpp
2023/src/day09/: main.cpp
2023/src/day09_1/: main.cpp
2023/src/day09_2/: main.cpp
2023/src/day10/: main.cpp
2023/src/day10_1/: main.cpp
2023/src/day10_2/: main.cpp
2023/src/day11/: main.cpp
2023/src/day11_1/: main.cpp
2023/src/day11_2/: main.cpp
2023/src/day12/: main.cpp
2023/src/day12_1/: main.cpp
2023/src/day13/: main.cpp
2023/src/day13_1/: main.cpp
2023/src/day13_2/: main.cpp
2023/src/day14/: main.cpp
2023/src/day14_1/: main.cpp
2023/src/day14_2/: main.cpp
2023/src/day15/: main.cpp
2023/src/day15_1/: main.cpp
2023/src/day15_2/: main.cpp
2023/src/day16/: main.cpp
2023/src/day16_1/: main.cpp
2023/src/day16_2/: main.cpp
2023/src/day17/: main.cpp
2023/src/day17_1/: main.cpp
2023/src/day17_2/: main.cpp
2023/src/day18/: main.cpp
2023/src/day18_1/: main.cpp
2023/src/day18_2/: main.cpp
2023/src/day19/: main.cpp
2023/src/day1_1/: main.cpp
2023/src/day1_2/: main.cpp
2023/src/day20/: main.cpp
2023/src/day2_1/: main.cpp
2023/src/day3_2/: main.cpp
2023/src/day4_1/: main.cpp
2023/src/day5_2/: main.cpp
2023/src/day6_1/: main.cpp
2023/src/day7_1/: main.cpp
2023/src/day8_1/: main.cpp
2023/src/day8_2/: main.cpp
2023/src/day9_1/: main.cpp
2023/src/utils/: elven_io.h  elven_measure.h  elven_utils.h
2024/: .gitignore  CMakeLists.txt
2024/src/day01/: main.cpp
2024/src/utils/: elven_measure.h
